
Directory lib/libnullptlib
 pkgconfig/                Locally Added               0 

Directory lib/libnullptlib/pkgconfig
 libnullptlib.pc.in        Locally Added               0 
 libnullptlib-uninstalled.pc.in Locally Added               0 
 libnullptlib-uninstalled.pc Locally Added               0 
 libnullptlib.pc           Locally Added               0 

Directory lib/libnullptlib
 src/                      Locally Added               0 

Directory lib/libnullptlib/src
 ptlib.cpp                 Locally Added               0 

Directory lib/libnullptlib
 Makefile.am               Locally Added               0 

Directory modules/controller/classic
 args.cpp                  Locally Modified           91 

Directory modules/system
 single_chip_common_system_v2.awb Locally Added               0 
 multi_chip_common_system_v2.awb Locally Added               0 
 single_chip_clockserver_system_v2.awb Locally Added               0 

Directory modules/system/ape_system
 ape.awb                   Locally Modified           91 

Directory modules
 dral_api/                 Locally Added               0 

Directory modules/dral_api
 classic_dral_api_nullptv.awb Locally Added               0 
 x86_dral_api.awb          Locally Added               0 
 classic_dral_api_ptv_bk.awb Locally Added               0 
 classic_dral_api_ptv.awb  Locally Added               0 

Updating with simcore changes (rev. 2314 - Brian Slechta)

added ptv support to dral. this can be enabled with --enable-ptv=yes. this
is off by default.

wrote and debugged new dral/ptv api for ptv-style event instrumentation. you
can now generate ptv logs using coho-bk or x86libs versions of ptlib.

added libnullptlib to be linked in with a ptv-enabled libdral when you do not
want to link in a real ptv library.

fix for asim bug #0000741.

created new "system" modules which have support for the new "dral_api" modules
(ie. version 2). added new "dral_api" modules.